# h-devops-cli

./: .autopep8  .gitignore  CHANGELOG.md  LICENSE.md  README.md  main.py  pyproject.toml  tools.sh
h_devops/: .gitignore  __main__.py  main.py
h_devops/install/: docker.py  nvm.py
tests/: test_h_devops.py
