[tool.poetry]
name = "h-devops"
version = "0.3.1"
description = ""
authors = ["Vo Viet Hoang <levuthanhtung11@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
h-devops = "h_devops.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.4.1"}
psutil = "^5.9.1"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
